[gd_scene load_steps=2 format=3 uid="uid://bq8scqlatii4"]

[ext_resource type="Script" path="res://HUD/attack_menu.gd" id="1_yyvd5"]

[node name="Window" type="Window"]
position = Vector2i(0, 36)
content_scale_mode = 2

[node name="AttackMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyvd5")
